# zynax

./: .dockerignore  .gitignore  .mcp.json.example  .pre-commit-config.yaml  .trivyignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  go.work  go.work.sum  renovate.json
.claude/agents/: bdd-contract.md  ci-release.md  go-services.md  infra-helm.md  post-merge.md  python-adapters.md  spdd-canvas.md
.claude/commands/: README.md  architecture-review.md  deliver.md  issue-deliver.md  learn.md  m6-issue-generate.md  m6-learn.md  m6-orchestrate.md  m6-plan.md  market-fit-review.md  milestone-close.md  milestone-learn.md  milestone-new.md  milestone-orchestrate.md  milestone-plan.md  milestone.md  plan.md  product-review.md  reconcile.md  repo-clean.md  resume-m5.md  resume-m6.md  resume-milestone.md  review-suite.md  review.md  roadmap-plan.md  security-review-doc.md  spdd-analysis.md  spdd-api-test.md  spdd-generate.md  spdd-prompt-update.md  spdd-reasons-canvas.md  spdd-security-review.md  spdd-story.md  spdd-sync.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adr_proposal.md  bug_report.md  config.yml  documentation.md  epic.md  feature_request.md  image_bump.md
.github/scripts/: build-bdd-comment.js  build-coverage-comment.sh  post-bdd-comment.js  post-coverage-comment.js  post-pr-comment.js  report-image-meta.sh
.github/workflows/: _test-go.yml  _test-python.yml  ai-context-budget.yml  ci.yml  cli-release.yml  dev-advisory.yml  e2e-smoke-skip.yml  e2e-smoke.yml  helm-lint.yml  kb-approve.yml  kb-preview-post.yml  kb-preview.yml  post-merge-completeness.yml  pr-checks.yml  pr-comment.yml  pr-image-cleanup.yml  pr-sarif.yml  pr-size.yml  proto-generate.yml  proto-stubs-publish.yml  release.yml  sdk-publish.yml  service-release.yml  tools-image.yml  tools-publish.yml  weekly-audit.yml  zynax-ci-release.yml
agents/: AGENTS.md
agents/adapters/: AGENTS.md
agents/adapters/langgraph/: AGENTS.md  Dockerfile  pyproject.toml
agents/adapters/langgraph/examples/: __init__.py  echo_graph.py
agents/adapters/langgraph/src/langgraph_adapter/: __init__.py  __main__.py  config.py  graph_loader.py  handler.py  router.py  server.py
agents/adapters/langgraph/src/langgraph_adapter/registry/: __init__.py  client.py
agents/adapters/langgraph/tests/: conftest.py  test_config.py  test_graph_loader.py  test_handler.py  test_registry.py  test_router.py
agents/adapters/llm/: AGENTS.md  Dockerfile  agent-def.yaml.example  go.mod  go.sum  pyproject.toml
agents/adapters/llm/cmd/llm-adapter/: main.go  main_test.go
agents/adapters/llm/internal/config/: config.go  config_test.go  secret.go
agents/adapters/llm/internal/domain/: events.go  handler.go  handler_test.go  router.go  router_test.go
agents/adapters/llm/internal/provider/: bedrock.go  bedrock_test.go  ollama.go  ollama_test.go  openai.go  openai_test.go  provider.go  provider_test.go
agents/adapters/llm/internal/registry/: client.go  client_test.go  client_unimplemented_test.go
agents/adapters/llm/internal/server/: server.go  server_test.go
agents/adapters/llm/src/llm_adapter/: __init__.py  __main__.py  config.py  handler.py  router.py  server.py
agents/adapters/llm/src/llm_adapter/providers/: __init__.py  bedrock.py  ollama.py  openai.py
agents/adapters/llm/src/llm_adapter/registry/: __init__.py  client.py
agents/adapters/llm/tests/: conftest.py  test_config.py  test_providers.py  test_registry.py  test_router.py
agents/examples/: AGENTS.md
agents/examples/go-review-expert/: capability.json  pyproject.toml
agents/examples/go-review-expert/src/go_review_expert/: __init__.py  agent.py
agents/examples/go-review-expert/tests/: test_go_review.py
agents/examples/go-review-expert/tests/features/: go_review.feature
agents/sdk/: AGENTS.md  pyproject.toml
agents/sdk/src/zynax_sdk/: __init__.py  agent.py  handoff.py  telemetry.py
agents/sdk/tests/: conftest.py  servers.py  test_agent.py  test_agent_registry.py  test_agent_service.py  test_handoff.py  test_package.py  test_telemetry.py
agents/sdk/tests/features/: agent_service.feature
automation/: README.md  STATUS-AND-DIRECTION.md  milestone-env.sh
automation/experts/: arch-adr.yaml  ci-release.yaml  runtime_mapping.yaml
automation/orchestrator/: aggregation-protocol.md  decision-log-schema.yaml
automation/scripts/: check_expert_mapping.py
automation/tests/: conftest.py  platform_client.py  test_expert_agentdefs.py  test_expert_mapping.py  test_issue_delivery.py  test_learning_synthesizer.py  test_orchestrator_workflow.py  test_platform_readiness.py
automation/workflows/: dev-advisory-orchestrator.yaml  issue-delivery.yaml  learning-synthesizer.yaml
cmd/zynax/: AGENTS.md  go.mod  go.sum  main.go
cmd/zynax-ci/: AGENTS.md  go.mod  go.sum  main.go
config/: ci-runner-digest.txt
docs/: ai-assistant-setup.md  best-practices.md  dev-config-private.md  developer-guide.md  faq.md  git-workflow.md  github-setup.md  knowledge-base-policy.md  labels.md  local-dev-kind.md  local-dev.md  migration-v0.6.md  quickstart.md  running-with-docker-compose.md  troubleshooting.md
docs/adr/: ADR-001-grpc-inter-service-protocol.md  ADR-002-python-312.md  ADR-003-uv-package-manager.md  ADR-004-bdd-testing.md  ADR-005-apache-license.md  ADR-006-monorepo.md  ADR-012-workflow-ir.md  (+46 more)
images/: images.yaml
infra/: AGENTS.md
protos/: AGENTS.md  buf.gen.yaml  buf.yaml
scripts/: bump-ci-runner.sh  update_image_digest.py  validate_milestone_state.py
services/: AGENTS.md
spec/: AGENTS.md
state/: current-milestone.md  milestone.schema.json  milestone.yaml
tools/: README.md  bench-baseline.txt  count-ai-context.sh  coverage-gates.env  gitleaks-ai-context.toml  gitleaks-baseline.json  golangci-lint-precommit.sh  golangci-lint.yml  mypy.ini  pr-review-workflow.sh  ruff.toml  validate_agent_defs.py  validate_canvas.py  validate_capabilities.py  validate_json_schemas.py  validate_policies.py  validate_workflows.py
(+1001 files in other folders)
