# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zynax_sdk"]

[project]
name = "zynax-sdk"
version = "0.1.0"
description = "Zynax Python SDK — framework-agnostic agent runtime adapter"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    "grpcio>=1.80.0",
    "protobuf>=7.34.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-grpc>=0.46b0",
]


[tool.mypy]
python_version = "3.12"
strict         = true
# Resolve imports from the src/ layout without requiring package installation.
mypy_path      = "src"

# Third-party packages declared as dependencies that ship without PEP 561
# inline types or a companion -stubs package. Add entries here as real imports
# are introduced — never suppress with inline  # type: ignore[import].
[[tool.mypy.overrides]]
module = [
    "grpc",
    "grpc.*",
    "opentelemetry.*",
    "prometheus_client",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest==9.0.*",
    "pytest-bdd==8.1.*",
    "pytest-asyncio==1.3.*",
    "pytest-cov==7.1.*",
    "ruff==0.15.*",
    "mypy==1.20.*",
    "bandit==1.9.*",
    "pip-audit==2.10.*",
]
