# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zynax_sdk"]

[project]
name = "zynax-sdk"
version = "0.1.0"
description = "Minimal Python SDK for Zynax capability adapters — Agent base class and capability routing"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    "grpcio>=1.80.0",
    "urllib3>=2.7.0",  # CVE-2026-44431, CVE-2026-44432 — pin floor via transitive grpcio dep
    "protobuf>=7.35.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-grpc>=0.46b0",
    "idna>=3.15",  # CVE-2026-45409 — pin floor via transitive requests dep
]


[tool.mypy]
python_version = "3.12"
strict         = true
# Resolve imports from the src/ layout without requiring package installation.
mypy_path      = "src"

# Third-party packages declared as dependencies that ship without PEP 561
# inline types or a companion -stubs package. Add entries here as real imports
# are introduced — never suppress with inline  # type: ignore[import].
[[tool.mypy.overrides]]
module = [
    "grpc",
    "grpc.*",
    "google.protobuf",
    "google.protobuf.*",
    "opentelemetry.*",
    "prometheus_client",
    "zynax.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["D"]
# D105 (magic method docstring) is optional per Google style; __init_subclass__
# and similar hooks are implementation details and need not be documented.
extend-ignore = ["D105"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest==9.0.*",
    "pytest-bdd==8.1.*",
    "pytest-asyncio==1.3.*",
    "pytest-cov==7.1.*",
    "ruff==0.15.*",
    "mypy==1.20.*",
    "bandit==1.9.*",
    "pip-audit==2.10.*",
]

[tool.pip-audit]
# PYSEC-2026-196 — pip 26.1.1 fixed in 26.1.2. pip-audit scans the full
# environment including the CI runner's pip; zynax-sdk does not depend on pip.
# Re-evaluate when CI runner image upgrades to pip >=26.1.2.
# Added: 2026-06-08  Re-evaluate: 2026-09-08
ignore-vulns = ["PYSEC-2026-196"]

# PyPI Trusted Publisher (OIDC) — no API keys stored in secrets.
# Hatch publish config for CI; the workflow name and environment name must
# match the trusted publisher registration on PyPI / TestPyPI.
# See agents/sdk/AGENTS.md §PyPI Trusted Publisher Setup for registration steps.
[tool.hatch.publish.index]
repo = "main"

[tool.hatch.envs.hatch-publish]
# Dependencies used only in the publish environment (not installed for normal dev).
dependencies = ["hatch>=1.13"]
