# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_adapter"]

[project]
name = "llm-adapter"
version = "0.1.0"
description = "Zynax LLM provider capability adapter — OpenAI, Bedrock, Ollama"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    "grpcio>=1.80.0",
    "protobuf>=7.35.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.2.0",
    "openai>=1.30.0",
    "aiobotocore>=2.13.0",
    "aiohttp>=3.14.0",  # CVE-2026-34993, CVE-2026-47265 — floor the transitive dep explicitly
    "httpx>=0.27.0",
]

[tool.mypy]
python_version = "3.12"
strict         = true
mypy_path      = "src"

[[tool.mypy.overrides]]
module = [
    "grpc",
    "grpc.*",
    "google.protobuf",
    "google.protobuf.*",
    "zynax.*",
    "openai",
    "openai.*",
    "aiobotocore",
    "aiobotocore.*",
    "botocore",
    "botocore.*",
    "httpx",
    "httpx.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP", "S", "B"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest==9.0.*",
    "pytest-asyncio==1.3.*",
    "pytest-cov==7.1.*",
    "ruff==0.15.*",
    "mypy==1.20.*",
    "bandit==1.9.*",
    "pip-audit==2.10.*",
]
