# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/go_review_expert"]

[project]
name = "go-review-expert"
version = "0.1.0"
description = "Zynax reference expert agent — rule-based Go code review (SDK example)"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    "zynax-sdk",
    "grpcio>=1.80.0",
    "protobuf>=7.35.0",
]

[tool.uv.sources]
zynax-sdk = { path = "../../sdk", editable = true }

[tool.mypy]
python_version = "3.12"
strict         = true
mypy_path      = "src"

[[tool.mypy.overrides]]
module = [
    "grpc",
    "grpc.*",
    "google.protobuf",
    "google.protobuf.*",
    "zynax.*",
    "zynax_sdk",
    "zynax_sdk.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP", "S", "B"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest==9.0.*",
    "pytest-bdd==8.1.*",
    "pytest-asyncio==1.3.*",
    "pytest-cov==7.1.*",
    "ruff==0.15.*",
    "mypy==1.20.*",
    "bandit==1.9.*",
    "pip-audit==2.10.*",
]
